Client code from swagger
