# microservices/product-api-withswagger/handlers/post.go
@@ -6,6 +6,12 @@ import (
 	"github.com/erankitcs/golang_learning/microservices/product-api-withswagger/data"
 )
 
+// swagger:route POST /products products createProduct
+// Create a new product.
+// responses:
+//	200: productsResponse
+//  422: errorValidation
+//  400: errorResponse
 func (p *Products) Create(rw http.ResponseWriter, r *http.Request) {
 	prod := r.Context().Value(KeyProduct{}).(*data.Product)
 	p.l.Printf("[DEBUG] Inserting product: %#v\n", prod)
